<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <!-- Book details category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/book_details" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Title field -->
                <EditText
                    android:id="@+id/edit_book_title"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_book_title"
                    android:inputType="textCapWords" />

                <!-- Author field -->
                <EditText
                    android:id="@+id/edit_book_author"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_book_author"
                    android:inputType="textCapWords" />

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_book_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_book_price"
                    android:inputType="numberDecimal" />

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_book_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <!-- Book details category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier_details" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Supplier name field -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textCapWords" />

                <!-- Supplier phone number field -->
                <EditText
                    android:id="@+id/edit_supplier_phone_number"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_phone_number"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>