<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of books -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/price_label"
        style="@style/BookLabel"
        android:layout_below="@id/title"
        android:text="@string/hint_book_price" />

    <TextView
        android:id="@+id/price"
        style="@style/BookValues"
        android:layout_below="@id/title"
        android:layout_toEndOf="@id/price_label"
        android:layout_toRightOf="@id/price_label" />

    <TextView
        android:id="@+id/quantity_label"
        style="@style/BookLabel"
        android:layout_below="@id/price_label"
        android:text="@string/hint_book_quantity" />

    <TextView
        android:id="@+id/quantity"
        style="@style/BookValues"
        android:layout_below="@id/price"
        android:layout_toEndOf="@id/quantity_label"
        android:layout_toRightOf="@id/quantity_label" />

    <Button
        android:id="@+id/sale"
        style="@style/SaleButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/sale_book" />

</RelativeLayout>